2020-05-09  Tom Tromey  <tom@tromey.com>

	* symtab.c (fixup_section): Update.
	* solib-aix.c (data_obj_section_from_objfile): Update.
	* ia64-tdep.c (ia64_find_global_pointer_from_dynamic_section)
	(find_extant_func_descr): Update.
	* minsyms.c (frob_address): Update.
	* maint.c (maintenance_translate_address): Update.
	* hppa-linux-tdep.c (hppa_linux_find_global_pointer): Update.
	* machoread.c (macho_symfile_offsets): Update.
	* printcmd.c (info_symbol_command): Update.
	* solib-frv.c (frv_relocate_main_executable): Update.
	* symfile.c (init_entry_point_info, overlay_invalidate_all)
	(find_pc_overlay, find_pc_mapped_section, list_overlays_command)
	(map_overlay_command, unmap_overlay_command)
	(simple_overlay_update): Update.
	* solib-dsbt.c (dsbt_relocate_main_executable): Update.
	* exec.c (add_target_sections_of_objfile): Update.
	* arm-tdep.c (arm_obj_section_from_vma): Update.
	* objfiles.c (objfile_relocate1, sort_cmp, update_section_map)
	(is_addr_in_objfile): Update.
	* hppa-tdep.c (hppa64_convert_code_addr_to_fptr): Update.
	* xstormy16-tdep.c (xstormy16_find_jmp_table_entry): Update.
	* gcore.c (gcore_create_callback, objfile_find_memory_regions):
	Update.
	* objfiles.h (ALL_OBJFILE_OSECTIONS): Declare "osect".

2020-05-09  Tom Tromey  <tom@tromey.com>

	* top.c (server_command): Now bool.
	* top.h (server_command): Now bool.

2020-05-08  Tom Tromey  <tromey@adacore.com>

	* dwarf2/read.c (read_lexical_block_scope): Don't process a DIE
	already being processed.

2020-05-08  Tom Tromey  <tom@tromey.com>

	* printcmd.c (struct display) <next>: Remove.
	<display>: New constructor.
	<exp_string>: Now a std::string.
	<enabled_p>: Now a bool.
	(display_number): Move definition earlier.
	(displays): Rename from display_chain.  Now a std::vector.
	(ALL_DISPLAYS, ALL_DISPLAYS_SAFE): Remove.
	(display_command): Update.
	(do_one_display, disable_display)
	(enable_disable_display_command, do_enable_disable_display):
	Update.
	(free_display): Remove.