@@ -490,22 +490,24 @@ extern struct obj_section *find_pc_mapped_section (CORE_ADDR);
 extern struct obj_section *find_pc_overlay (CORE_ADDR);
 
 /* Return true if the section is an overlay.  */
-extern int section_is_overlay (struct obj_section *);
+extern int section_is_overlay (const struct obj_section *);
 
 /* Return true if the overlay section is currently "mapped".  */
 extern int section_is_mapped (struct obj_section *);
 
 /* Return true if pc belongs to section's VMA.  */
-extern CORE_ADDR pc_in_mapped_range (CORE_ADDR, struct obj_section *);
+extern CORE_ADDR pc_in_mapped_range (CORE_ADDR, const struct obj_section *);
 
 /* Return true if pc belongs to section's LMA.  */
-extern CORE_ADDR pc_in_unmapped_range (CORE_ADDR, struct obj_section *);
+extern CORE_ADDR pc_in_unmapped_range (CORE_ADDR, const struct obj_section *);
 
 /* Map an address from a section's LMA to its VMA.  */
-extern CORE_ADDR overlay_mapped_address (CORE_ADDR, struct obj_section *);
+extern CORE_ADDR overlay_mapped_address (CORE_ADDR,
+					 const struct obj_section *);
 
 /* Map an address from a section's VMA to its LMA.  */
-extern CORE_ADDR overlay_unmapped_address (CORE_ADDR, struct obj_section *);
+extern CORE_ADDR overlay_unmapped_address (CORE_ADDR,
+					   const struct obj_section *);
 
 /* Convert an address in an overlay section (force into VMA range).  */
 extern CORE_ADDR symbol_overlayed_address (CORE_ADDR, struct obj_section *);
